# chattybot

./: BOOTSTRAP.md  README.md  pyproject.toml
chattybot/: cli.py
