[tool.poetry]
name = "chattybot"
version = "0.1.0"
description = "LangChain chatbot with memory."
authors = ["Gary Gause <gary@gause.dev>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.18"
langchain-openai = "^0.3.5"
langchain-community = "^0.3.17"
python-dotenv = "^1.0.0"
langchain-anthropic = "^0.3.8"
langchain-ollama = "^0.2.3"
langchain-gemini = "^0.1.1"
langchainhub = "^0.1.21"
click = "^8.1.8"
click-shell = "^2.1"

[tool.project.scripts]
chatty = "chattybot:main_cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
